<resources>
    <string name="app_name">Coinwallet</string>
    <string name="action_settings">Settings</string>
    <string name="sell">SELL</string>
    <string name="buy">BUY</string>
    <string name="add">ADD</string>
    <string name="notification">SET NOTIFICATION</string>
    <string name="exchnage">EXCHANGE</string>
    <string name="settings">SETTINGS</string>
    <string name="home">HOME</string>
    <string name="wallet">WALLET</string>
    <string name="watchlist">WATCHLIST</string>
    <string name="sellprice">SELL PRICE     :</string>
    <string name="buyprice">BUY PRICE      :</string>
    <string name="action_search">Search</string>
    <string name="model_clicked_pattern">You clicked on the rank %1$d word: %2$s!</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="ripple">Ripple</string>
    <string name="Etherium">Ether</string>
    <string name="Litecoin">Litecoin</string>

    <!--- AFTER LOGIN CHANGES THESE ARE THE STRING -->
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="login_mobile">LOGIN WITH MOBILE NUMBER</string>
    <string name="login_email">LOGIN WITH EMAIL</string>

</resources>
