<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_watchlist"
        android:enabled="true"
        android:icon="@drawable/watchlist"
        android:title="@string/watchlist"
         />
    <item
        android:id="@+id/action_wallet"
        android:enabled="true"
        android:icon="@drawable/wallet"
        android:title="@string/wallet"
         />
    <item
        android:id="@+id/action_exchange"
        android:enabled="true"
        android:icon="@drawable/currency"
        android:title="@string/exchnage"
        />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/settings"
         />

</menu>
