<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="0sp">

    <RadioGroup
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sell"
            android:textSize="18sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/pricevalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="PRICE"
        android:padding="10dp"
        android:layout_below="@id/radioGroup"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/volumevalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_below="@id/pricevalue"
        android:hint="VOLUME"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/Totalvolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:hint="TOTAL"
        android:layout_below="@id/volumevalue"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addbutton"
        android:text="@string/add"
        android:layout_below="@id/Totalvolume"
        />

</RelativeLayout>
