<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_register"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/primary_color"
            android:text="ONE DAY"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TWO DAY"
            android:textSize="18sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/exchangealarmbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/darkgray_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buyalarmbox"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EXCHANGE"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="sans" />


        <TextView
            android:id="@+id/exchange_alarm_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/exchange"
            android:layout_marginTop="1dip"
            android:text="USD"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <!-- Rightend Duration -->


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buyalarmbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/darkgray_bg"
        android:orientation="horizontal"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/primary_color"
            android:gravity="center"
            android:text="@string/buyprice"
            android:textColor="#040404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/buyalarmprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sellalarmbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/darkgray_bg"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/accent_color"
            android:gravity="center"
            android:text="@string/sellprice"
            android:textColor="#040404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sellalarmprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/add_alarm_button"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/notification"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="right"
        android:textStyle="bold"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/alarmsetbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@color/lightgray_bg"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="276dp">

    </android.support.constraint.ConstraintLayout>


</LinearLayout>